# wxwidgets

./: CMakeLists.txt  dist.info
cmake/: FindGStreamer.cmake  bkl2cmake.lua  configure.cmake  files.cmake  monolithic.cmake  multilib.cmake  setup.h.cmake  setup.h.lua  va.cmake
cmake/configure/: defines.cmake  functions.cmake  headers.cmake  sizes.cmake  symbols.cmake
include/wx/: filefn.h
locale/: af.mo  ar.mo  ca.mo  ca@valencia.mo  cs.mo  da.mo  eu.mo  fi.mo  gl_ES.mo  hi.mo  hu.mo  id.mo  it.mo  ko_KR.mo  lt.mo  lv.mo  ms.mo  ne.mo  nl.mo  ro.mo  sk.mo  sl.mo  sq.mo  sv.mo  ta.mo  uk.mo  vi.mo  zh_TW.mo
locale/msw/: it.mo
src/cocoa/: notebook.mm
src/expat/: expat_config.h.in
